﻿FIXES
- Remove the "-pre" from the version string, fix some typos.
IMPROVEMENTS
- Weapons:
	- Add pro-nav gain parameter as tunable parameter for missile parts (pronavGain), set pro-nav gain to 3 by default.


v1.5.0.0
FIXES
- Fix 'resizeSquare' texture not being loaded sometimes (due to a race condition?).
- Clean up log spam from ExplosionFX.
- Fix Ammo Selection Tool GUI when selecting a weapon using legacy ammo definitions.
- Fix ATG missiles not respecting maxMissilesPerTarget.
- Fixes Procwing HP and Armor calcs when using FAR.
- Fix ProcParts not updating HP/Armor volume.
- Adds missing FFAR rocket ammo to universal ammo boxes.
- Fixes TOW missile FX.
- Fixes Proc Armor bugs.
- Fixes broken hydraulics on Chaingun, Hydra Turret and Patriot Launcher models.
- Fixes custom armor volumes in .cfgs being ignored.
- Fix some EMP weapon Selection logic.
- EMP AMRAAM and EMP Hellfire missiles now have different names to differentiate them from vanilla variants.
- Fixes Armor explosion resistance.
- Armor panels no longer indestructible.
- VTOL AI no longer toggles off guard mode in competitions.
- Fixes Debris icons not appearing when Team Icons enabled.
- Fixes Chaingun/Rocketpod Rounds Per Minute slider values when reverting to VAB/SPH.
- Fixes ripplefire issue with weapons with different rates of fire in one weapongroup.
- Fix for issue where AI was not leading target when KSP was running on M1 Macs (Apple Silicon).
- Fixes JDAM inaccuracy issue.

IMPROVEMENTS
- General:
	- Rebranded as "BDArmory Plus" (BDA+) on SpaceDock/CKAN (from "BDArmory for Runway Project") and forum thread created.
	- Major internal refactor to better organise code.
	- Switch to a single DLL release.
	- Add missing HP rounding to some parts.
	- Stop continuous single spawn when running a tournament.
	- Optimise the PartExploderSystem to minimise creation of new vessels.
	- CM Flares optimized, now have much reduced performance hit.